# Real-Time-logger

./: .clang-format  .clang-tidy  .gitignore  BUILD.md  CMakeLists.txt  README.md
benchmarks/: .clang-tidy  CMakeLists.txt  bench_format.cpp  bench_logger.cpp  bench_ring.cpp
cmake/: rt-logger-config.cmake.in
examples/: CMakeLists.txt  broadcast_client.cpp  simple_client.cpp  stress_client.cpp
include/: CMakeLists.txt
include/rt-logger/: broadcast_writer.h  console_writer.h  errors.h  file_writer.h  ilog_writer.h  ilogger.h  iring.h  log_entry.h  log_level.h  logger.h  mpsc_ring.h
src/: CMakeLists.txt  broadcast_writer.cpp  console_writer.cpp  file_writer.cpp  logger.cpp  placeholder.cpp
tests/: .clang-tidy  CMakeLists.txt  broadcast_writer_test.cpp  file_writer_test.cpp  log_entry_test.cpp  log_level_test.cpp  logger_test.cpp  mpsc_ring_test.cpp
tests/mocks/: CMakeLists.txt  mock_log_writer.h  mock_logger.h  mock_ring.h
